resources/policy/constraints/k8shttpsonly.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: |-
      Requires Ingress resources to be HTTPS only.  Ingress resources must include the `kubernetes.io/ingress.allow-http` annotation, set to `false`. By default a valid TLS {} configuration is required, this can be made optional by setting the `tlsOptional` parameter to `true`.
      https://kubernetes.io/docs/concepts/services-networking/ingress/#tls
    metadata.gatekeeper.sh/title: HTTPS Only
  labels:
    app.kubernetes.io/managed-by: deployments.plural.sh
  name: k8shttpsonly
spec:
  crd:
    spec:
      names:
        kind: K8sHttpsOnly
      validation:
        legacySchema: false
        openAPIV3Schema:
          description: Requires Ingress resources to be HTTPS only.  Ingress resources
            must include the `kubernetes.io/ingress.allow-http` annotation, set to
            `false`. By default a valid TLS {} configuration is required, this can
            be made optional by setting the `tlsOptional` parameter to `true`.
          properties:
            tlsOptional:
              description: When set to `true` the TLS {} is optional, defaults to
                false.
              type: boolean
          type: object
  targets:
  - rego: |
      package k8shttpsonly

      violation[{"msg": msg}] {
        input.review.object.kind == "Ingress"
        regex.match("^(extensions|networking.k8s.io)/", input.review.object.apiVersion)
        ingress := input.review.object
        not https_complete(ingress)
        not tls_is_optional
        msg := sprintf("Ingress should be https. tls configuration and allow-http=false annotation are required for %v", [ingress.metadata.name])
      }

      violation[{"msg": msg}] {
        input.review.object.kind == "Ingress"
        regex.match("^(extensions|networking.k8s.io)/", input.review.object.apiVersion)
        ingress := input.review.object
        not annotation_complete(ingress)
        tls_is_optional
        msg := sprintf("Ingress should be https. The allow-http=false annotation is required for %v", [ingress.metadata.name])
      }

      https_complete(ingress) = true {
        ingress.spec["tls"]
        count(ingress.spec.tls) > 0
        ingress.metadata.annotations["kubernetes.io/ingress.allow-http"] == "false"
      }

      annotation_complete(ingress) = true {
        ingress.metadata.annotations["kubernetes.io/ingress.allow-http"] == "false"
      }

      tls_is_optional {
        parameters := object.get(input, "parameters", {})
        object.get(parameters, "tlsOptional", false) == true
      }
    target: admission.k8s.gatekeeper.sh
